--- a/docker/traefik/compose.yml
+++ b/docker/traefik/compose.yml
@@ -2,7 +2,7 @@ version: '3'
 
 services:
   traefik:
-    image: traefik:latest
+    image: traefik:2.11.2
     container_name: traefik
     restart: unless-stopped
     security_opt:
